[gd_scene load_steps=2 format=3 uid="uid://c6j3afi61e0kp"]

[ext_resource type="Script" path="res://cheats/cheat_player.gd" id="1_yhxu8"]

[node name="CheatPlayer" type="PanelContainer"]
offset_left = 46.0
offset_top = 285.0
offset_right = 402.0
offset_bottom = 424.0
script = ExtResource("1_yhxu8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerLevel" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PlayerLevel"]
layout_mode = 2
text = "Player Level   "

[node name="HSlider" type="HSlider" parent="VBoxContainer/PlayerLevel"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="SliderValue" type="Label" parent="VBoxContainer/PlayerLevel"]
layout_mode = 2
size_flags_horizontal = 8
text = "1  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="MaxLevel" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MaxLevel"]
layout_mode = 2
text = "Max Level        "

[node name="HSlider" type="HSlider" parent="VBoxContainer/MaxLevel"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 10.0

[node name="SliderValue" type="Label" parent="VBoxContainer/MaxLevel"]
layout_mode = 2
size_flags_horizontal = 8
text = "1  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="BaseXP" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BaseXP"]
layout_mode = 2
text = "Base XP           "

[node name="HSlider" type="HSlider" parent="VBoxContainer/BaseXP"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 2000.0
value = 1.0

[node name="SliderValue" type="Label" parent="VBoxContainer/BaseXP"]
layout_mode = 2
size_flags_horizontal = 8
text = "1  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="XP" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/XP"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="Label" type="Label" parent="VBoxContainer/XP"]
layout_mode = 2
text = "0000"

[node name="AddXpButton" type="Button" parent="VBoxContainer/XP"]
layout_mode = 2
text = "add exp "

[node name="PrevLevelThreshold" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NextLevelThreshold" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelThresholdDelta" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentXP" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ResetXpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset XP"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Gold" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/Gold"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
value = 10.0

[node name="Label" type="Label" parent="VBoxContainer/Gold"]
layout_mode = 2
text = "0000"

[node name="AddGoldButton" type="Button" parent="VBoxContainer/Gold"]
layout_mode = 2
text = "add gold"

[node name="ResetGoldButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset XP"

[connection signal="pressed" from="VBoxContainer/XP/AddXpButton" to="." method="add_xp"]
[connection signal="pressed" from="VBoxContainer/ResetXpButton" to="." method="reset_xp"]
[connection signal="pressed" from="VBoxContainer/Gold/AddGoldButton" to="." method="add_gold"]
[connection signal="pressed" from="VBoxContainer/ResetGoldButton" to="." method="reset_gold"]
